--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App VD</title>
   </head>
-  <body>
+  <body style="margin: auto">
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
